--- a/core/templates/dashboard.html
+++ b/core/templates/dashboard.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4">
         <div class="btn-toolbar dropdown">
             <button class="btn btn-dark btn-sm me-2 dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -26,40 +26,22 @@
             <button type="button" class="btn btn-sm btn-outline-primary">Export</button>
         </div>
     </div>
-    <div class="row justify-content-md-center">
-        <div class="col-12 mb-4">
-            <div class="card bg-secondary-alt shadow-sm">
-                <div class="card-header d-sm-flex flex-row align-items-center flex-0">
-                    <div class="d-block mb-3 mb-sm-0">
-                        <h3>{{ chartTitle|safe }}</h3>
-	                    <div id="chart-1">{{ output|safe }}</div>
-
-	                    <br/>
-	                    <a href="/">Back</a>
-                        </div>
-                    </div>
-
-                </div>
-                </div>
-        </div>
-    <div class="row justify-content-md-center">
+   <div class="row justify-content-md-center">
         <div class="col-12 col-sm-6 col-xl-4 mb-4">
             <div class="card border-light shadow-sm">
                     <div class="card-body">
                         <div class="row d-block d-xl-flex align-items-center">
                             <div class="col-12 col-xl-5 text-xl-center mb-3 mb-xl-0 d-flex align-items-center justify-content-xl-center">
                                     <span class='fa-stack fa-lg'>
-                                        <i class='fas fa-circle fa-stack-1x' style="font-size:55px;color:#47d1d1"></i>
-                                        <i class='fas fa-city fa-stack-1x fa-inverse' style="font-size:20px;color:white"></i>
+                                            <i class='fas fa-tachometer-alt fa-stack-1x' style="font-size:80px;color:black"></i>
                                     </span>
                                     </div>
                             <div class="col-12 col-xl-7 px-xl-0">
                                 <div class="d-none d-sm-block">
-                                    <a class="nav-link" href="/show">
-                                        <h3 class="mb-1">3</h3>
-                                        <h6 class="h6">Sites</h6>
-                                    </a>
-                                </div>
+                                    <a href="://brandfolder.com/quote"></a>
+                                    <h1 class="h6">OBD TAG 1</h1>
+                                   <div class="mb-0" id="RPM_Tag1"  style="font-size:25px;color:#1a73e8"></div>RPM
+                                   </div>
                             </div>
                             </div>
                         </div>
@@ -71,17 +53,15 @@
                         <div class="row d-block d-xl-flex align-items-center">
                             <div class="col-12 col-xl-5 text-xl-center mb-3 mb-xl-0 d-flex align-items-center justify-content-xl-center">
                                     <span class='fa-stack fa-lg'>
-                                        <i class='fas fa-circle fa-stack-1x' style="font-size:55px;color: #1ab2ff"></i>
-                                        <i class='fas fa-car-side fa-stack-1x fa-inverse' style="font-size:20px;color:white"></i>
+                                       <i class='fas fa-tachometer-alt fa-stack-1x' style="font-size:80px;color:black"></i>
                                     </span>
                                 </div>
                             <div class="col-12 col-xl-7 px-xl-0">
                             <div class="d-none d-sm-block">
-                                <a class="nav-link" href="/showCar" alt="alert">
-                                <h3 class="mb-1">3</h3>
-                                <h6 class="h6">Asset Cars</h6>
-                                    </a>
-                            </div>
+                              <a href="://brandfolder.com/quote"></a>
+                                    <h1 class="h6">OBD TAG 2</h1>
+                                   <div class="mb-0" id="RPM_Tag2"  style="font-size:25px;color:#1a73e8"></div>RPM
+                                  </div>
                           </div>
                             </div>
                         </div>
@@ -93,18 +73,16 @@
                     <div class="row d-block d-xl-flex align-items-center">
                         <div class="col-12 col-xl-5 text-xl-center mb-3 mb-xl-0 d-flex align-items-center justify-content-xl-center">
                                 <span class='fa-stack fa-lg'>
-                                     <i class='fas fa-circle fa-stack-1x' style="font-size:55px;color: #9933ff" ></i>
-                                     <i class='fas fa-ethernet fa-stack-1x fa-inverse' style="font-size:20px;color:white" ></i>
+                                     <i class='fas fa-tachometer-alt fa-stack-1x' style="font-size:80px;color:black"></i>
                                 </span>
 
                           </div>
                         <div class="col-12 col-xl-7 px-xl-0">
                             <div class="d-none d-sm-block">
-                                <a class="nav-link"  href="/showOBD" alt="alert">
-                                <h3 class="mb-1">2</h3>
-                                <h6 class="h6">Tag OBD</h6>
-                                </a>
-                            </div>
+                               <a href="://brandfolder.com/quote"></a>
+                                    <h1 class="h6">OBD TAG 3</h1>
+                                   <div class="mb-0" id="RPM_Tag3"  style="font-size:25px;color:#1a73e8"></div>RPM
+                               </div>
                           </div>
                     </div>
                 </div>
@@ -116,23 +94,70 @@
                     <div class="row d-block d-xl-flex align-items-center">
                         <div class="col-12 col-xl-5 text-xl-center mb-3 mb-xl-0 d-flex align-items-center justify-content-xl-center">
                                 <span class='fa-stack fa-lg'>
-                                     <i class='fas fa-circle fa-stack-1x' style="font-size:55px;color:#ff3333" ></i>
-                                     <i class='fas fa-exclamation-triangle fa-stack-1x fa-inverse' style="font-size:20px;color:white" ></i>
+                                     <i class='fas fa-tachometer-alt fa-stack-1x' style="font-size:80px;color:black"></i>
                                 </span>
                           </div>
                         <div class="col-12 col-xl-7 px-xl-0">
                             <div class="d-none d-sm-block">
-                                <a class="nav-link" href="alert_view.html" alt="alert">
-                                <h3 class="mb-1">2</h3>
-                                <h6 class="h6">Total Alerts</h6></a>
+                           <a href="://brandfolder.com/quote"></a>
+                                    <h1 class="h6">OBD TAG 1</h1>
+                                   <div class="mb-0" id="RPM_Tag4"  style="font-size:25px;color:#1a73e8"></div>RPM
                               </div>
-                              </div>
+                                   </div>
                           </div>
                         </div>
                     </div>
                 </div>
             </div>
+<script type="application/javascript" >
+         var settings = {
+           "async": true,
+           "crossDomain": true,
+           "url": "http://127.0.0.1:8000/api/RPM_tag1",
+           "method": "GET"
+         }
+         $.ajax(settings).done(function (response) {
+           console.log(response);
+           var content = response.RPM;
+           $("#RPM_Tag1").append(content);
+         });
 
+         var settings2 = {
+           "async": true,
+           "crossDomain": true,
+           "url": "http://127.0.0.1:8000/api/RPM_tag1",
+           "method": "GET"
+         }
+         $.ajax(settings2).done(function (response) {
+           console.log(response);
+           var content2 = response.RPM;
+           $("#RPM_Tag2").append(content2);
+         });
+
+         var settings3 = {
+           "async": true,
+           "crossDomain": true,
+           "url": "http://127.0.0.1:8000/api/RPM_tag1",
+           "method": "GET"
+         }
+         $.ajax(settings3).done(function (response) {
+           console.log(response);
+           var content3 = response.RPM;
+           $("#RPM_Tag3").append(content3);
+         });
+
+         var settings4 = {
+           "async": true,
+           "crossDomain": true,
+           "url": "http://127.0.0.1:8000/api/RPM_tag1",
+           "method": "GET"
+         }
+         $.ajax(settings4).done(function (response) {
+           console.log(response);
+           var content4 = response.RPM;
+           $("#RPM_Tag4").append(content4);
+         });
+      </script>
 
 {% endblock content %}
 
