--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -1,3 +1,5 @@
+<!-- Specific Page CSS goes HERE  -->
+
 <nav id="sidebarMenu" class="sidebar d-md-block bg-dark text-white collapse" data-simplebar>
     <div class="sidebar-inner px-4 pt-3">
       <div class="user-card d-flex d-md-none align-items-center justify-content-between justify-content-md-center pb-4">
@@ -29,13 +31,13 @@
           </a>
         </li>
         <li class="nav-item {% if 'dashboard' in segment %} active {% endif %}">
-          <a href="map.html" class="nav-link">
+            <a  class="nav-link" href="map.html">
             <span class="sidebar-icon"><span class="fas fa-chart-pie"></span></span>
             <span class="sidebar-text">Dashboard</span>
           </a>
         </li>
         <li class="nav-item {% if 'map' in segment %} active {% endif %}">
-          <a href="dashboard" class="nav-link">
+          <a href="dashboard.html" class="nav-link">
             <span class="sidebar-icon"><span class="fas fa-desktop"></span></span>
             <span class="sidebar-text">Monitoring</span>
           </a>
