--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -13,6 +13,10 @@
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <link href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link href="{% static 'gauge/css/jquery.simplegauge.css'%}" rel="stylesheet" />
+    <script src="{% static 'jquery.min.js' %}"></script>
+    <script src="{% static 'gauge/js/jquery.simplegauge.js'%}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <meta http-equiv="Content-Type" content="
     text/html; charset=utf-8" />
