--- a/core/static/assets/css/volt.css
+++ b/core/static/assets/css/volt.css
@@ -25025,6 +25025,11 @@ textarea.form-control-lg {
     position: absolute;
     right: -5px;
     top: -5px;
+
+}
+.test
+{
+color:white;
 }
 
 .navbar-theme-primary:not(.headroom) {
@@ -31158,10 +31163,45 @@ article .h1, article .h2, article .h3, article .h4, article .h5, article .h6 {
     background-color: #131620;
 }
 
-svg > g[class^="raphael-group-"] > text{
-    display: none;
+a { text-decoration: none; color: #2e3139; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; }
+a:focus, a:hover { text-decoration: none; color: #0943c6; }
+.content{padding-top:80px; padding-bottom:80px};
+.box { background-color: #fff; border-radius: 8px; border: 2px solid #e9ebef; padding: 50px; margin-bottom: 40px; }
+.box-title { margin-bottom: 30px; text-transform: uppercase; font-size: 16px; font-weight: 700; color: #094bde; letter-spacing: 2px; }
+.plan-selection { border-bottom: 2px solid #e9ebef; padding-bottom: 25px; margin-bottom: 35px; }
+.plan-selection:last-child { border-bottom: 0px; margin-bottom: 0px; padding-bottom: 0px; }
+.plan-data { position: relative; }
+.plan-data label { font-size: 20px; margin-bottom: 15px; font-weight: 400; }
+.plan-text { padding-left: 35px; }
+.plan-price { position: absolute; right: 0px; color: #094bde; font-size: 20px; font-weight: 700; letter-spacing: -1px; line-height: 1.5; bottom: 43px; }
+.term-price { bottom: 18px; }
+.secure-price { bottom: 68px; }
+.summary-block { border-bottom: 2px solid #d7d9de; }
+.summary-block:last-child { border-bottom: 0px; }
+.summary-content { padding: 0px 0px; }
+.summary-price { color: #094bde; font-size: 20px; font-weight: 400; letter-spacing: -1px; margin-bottom: 0px; display: inline-block; float: right; }
+.summary-small-text { font-weight: 700; font-size: 12px; color: #8f929a; }
+.summary-text { margin-bottom: -10px;font-size: 14px }
+.summary-title { font-weight: 700; font-size: 14px; color: #1c1e22; font-family: "Nunito Sans", sans-serif; }
+.summary-head { display: inline-block; width: 120px; }
+
+.widget { margin-bottom: 30px; background-color: #ffffff; padding: 0px; border-radius: 6px; }
+.widget:last-child { border-bottom: 0px; }
+.widget-title { color: #094bde; font-size: 16px; font-weight: 700; text-transform: uppercase; margin-bottom: 25px; letter-spacing: 1px; display: table; line-height: 1; }
+
+ .panel-heading  {
+    color: #fff !important;
+    background-color: #ff0000;
+    text-align:center;
+    border-color: #428bca;
+    padding:2px;
+    border-radius: 6px;
 }
-        g[class^='raphael-group-'][class$='-creditgroup'] {
-             display:none !important;
-        }
-div[id^='fc-'] > span > svg > defs + g > g:nth-child(26) { display:none !important; }
+.panel-heading h6{
+padding-top:6px;
+color: #fff
+}
+.detail{
+padding:12px;
+}
+
