--- a/core/templates/dashboard.html
+++ b/core/templates/dashboard.html
@@ -7,7 +7,6 @@
 
 {% block content %}
 
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4">
         <div class="btn-toolbar dropdown">
             <button class="btn btn-dark btn-sm me-2 dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -39,8 +38,8 @@
                             <div class="col-12 col-xl-7 px-xl-0">
                                 <div class="d-none d-sm-block">
                                     <a href="://brandfolder.com/quote"></a>
-                                    <h1 class="h6">OBD TAG 1</h1>
-                                   <div class="mb-0" id="RPM_Tag1"  style="font-size:25px;color:#1a73e8"></div>RPM
+                                    <h1 class="h5">OBD TAG 1</h1>
+                                   <div class="mb-0" id="RPM_Tag1"  style="font-size:20px;color:#1a73e8"></div>RPM
                                    </div>
                             </div>
                             </div>
@@ -59,8 +58,8 @@
                             <div class="col-12 col-xl-7 px-xl-0">
                             <div class="d-none d-sm-block">
                               <a href="://brandfolder.com/quote"></a>
-                                    <h1 class="h6">OBD TAG 2</h1>
-                                   <div class="mb-0" id="RPM_Tag2"  style="font-size:25px;color:#1a73e8"></div>RPM
+                                    <h1 class="h5">OBD TAG 2</h1>
+                                   <div class="mb-0" id="RPM_Tag2"  style="font-size:20px;color:#1a73e8"></div>RPM
                                   </div>
                           </div>
                             </div>
@@ -80,8 +79,8 @@
                         <div class="col-12 col-xl-7 px-xl-0">
                             <div class="d-none d-sm-block">
                                <a href="://brandfolder.com/quote"></a>
-                                    <h1 class="h6">OBD TAG 3</h1>
-                                   <div class="mb-0" id="RPM_Tag3"  style="font-size:25px;color:#1a73e8"></div>RPM
+                                    <h1 class="h5">OBD TAG 3</h1>
+                                   <div class="mb-0" id="RPM_Tag3"  style="font-size:20px;color:#1a73e8"></div>RPM
                                </div>
                           </div>
                     </div>
@@ -94,14 +93,14 @@
                     <div class="row d-block d-xl-flex align-items-center">
                         <div class="col-12 col-xl-5 text-xl-center mb-3 mb-xl-0 d-flex align-items-center justify-content-xl-center">
                                 <span class='fa-stack fa-lg'>
-                                     <i class='fas fa-tachometer-alt fa-stack-1x' style="font-size:80px;color:black"></i>
+                                     <i class='fas fa-tachometer-alt fa-stack-1x' style="font-size:80px;color:red"></i>
                                 </span>
                           </div>
                         <div class="col-12 col-xl-7 px-xl-0">
                             <div class="d-none d-sm-block">
                            <a href="://brandfolder.com/quote"></a>
-                                    <h1 class="h6">OBD TAG 1</h1>
-                                   <div class="mb-0" id="RPM_Tag4"  style="font-size:25px;color:#1a73e8"></div>RPM
+                                    <h3 class="h5">OBD TAG 4</h3>
+                                   <div class="mb-0" id="RPM_Tag4"  style="font-size:20px;color:#1a73e8"></div>RPM
                               </div>
                                    </div>
                           </div>
@@ -125,7 +124,7 @@
          var settings2 = {
            "async": true,
            "crossDomain": true,
-           "url": "http://127.0.0.1:8000/api/RPM_tag1",
+           "url": "http://127.0.0.1:8000/api/RPM_tag2",
            "method": "GET"
          }
          $.ajax(settings2).done(function (response) {
@@ -149,7 +148,7 @@
          var settings4 = {
            "async": true,
            "crossDomain": true,
-           "url": "http://127.0.0.1:8000/api/RPM_tag1",
+           "url": "http://127.0.0.1:8000/api/RPM_tag2",
            "method": "GET"
          }
          $.ajax(settings4).done(function (response) {
